# ccl

./: .gitignore  CMakeLists.txt  Makefile  README.md  pyproject.toml
.github/workflows/: test.yml
demos/: complementary_filter_demo.cpp
include/ccl/: ccl.hpp  complementary_filter.hpp  pid.hpp
notebooks/: main.py
python/ccl/: __init__.py
src/: ccl.cpp  complementary_filter.cpp  pid.cpp  python.cpp
tests/: ccl_test.cpp  complementary_filter_test.cpp  pid_test.cpp  test_ccl.py  test_pid.py
